--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,5 +1,5 @@
 .header {
-    background-image:linear-gradient(to right, rgb(51, 17, 105), rgb(165, 149, 2));
+    background-image:linear-gradient(180deg, rgb(51, 17, 105), rgb(165, 149, 2));
     padding-bottom: 6%;
     color: white;
     justify-content: center;
